--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,8 @@ services:
   # docker run -d --name mongodb --network=roboshop mongodb:1
   shipping:
     image: shipping:v1
-    ports: "8080:8080"
+    ports:
+    - "8080:8080"
 
   mongodb:
     image: mongodb:v1
